<resources>
    <string name="app_name">排班系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">注销</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_main">排班系统</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="save">保存</string>
    <string name="submit">提交</string>
    <string name="hint">已保存</string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wen">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sta">周六</string>
    <string name="sun">周日</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
</resources>
