<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!-- 最左边空白的格子 -->
    <TextView
        android:id="@+id/test_empty"
        style="@style/courseTableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/course_text_view_bg" />

    <!-- 星期一的格子 -->
    <TextView
        android:id="@+id/test_monday_course"
        style="@style/courseTableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/test_empty"
        android:background="@drawable/course_text_view_bg"
        android:text="@string/mon" />


    <!-- 星期二的格子 -->
    <TextView
        android:id="@+id/test_tuesday_course"
        style="@style/courseTableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/test_monday_course"
        android:background="@drawable/course_text_view_bg"
        android:text="@string/tue" />

    <!-- 星期三的格子 -->
    <TextView
        android:id="@+id/test_wednesday_course"
        style="@style/courseTableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/test_tuesday_course"
        android:background="@drawable/course_text_view_bg"
        android:text="@string/wen" />

    <!-- 星期四的格子 -->
    <TextView
        android:id="@+id/test_thursday_course"
        style="@style/courseTableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/test_wednesday_course"
        android:background="@drawable/course_text_view_bg"
        android:text="@string/thu" />
    <!-- 星期五的格子 -->
    <TextView
        android:id="@+id/test_friday_course"
        style="@style/courseTableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/test_thursday_course"
        android:background="@drawable/course_text_view_bg"
        android:text="@string/fri" />

    <!-- 星期六的格子 -->
    <TextView
        android:id="@+id/test_saturday_course"
        style="@style/courseTableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/test_friday_course"
        android:background="@drawable/course_text_view_bg"
        android:text="@string/sta" />

    <!-- 星期天的格子 -->
    <TextView
        android:id="@+id/test_sunday_course"
        style="@style/courseTableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/test_saturday_course"
        android:background="@drawable/course_table_last_colum"
        android:text="@string/sun" />

    <!-- 课程表body部分 -->
    <ScrollView
        android:id="@+id/scroll_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/test_empty"
        android:scrollbars="none">
        <!-- 课程信息 -->
        <RelativeLayout
            android:id="@+id/test_course_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"></RelativeLayout>
    </ScrollView>
</RelativeLayout>

